objects/Temp_Subs2Entitlement__c/Temp_Subs2Entitlement__c.object-meta.xml
<CustomObject>
    <description>Temporary object for the population of subscription modules into the Account Entitlement object</description>
    <label>Temp-Subs2Entitlement</label>
    <nameField>
        <displayFormat>S2E-{00000}</displayFormat>
        <label>Temp-Subs2Entitlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp-Subs2Entitlement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>