objects/Temp_Subs2Entitlement__c/fields/ELV_SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>ELV_SubscriptionId__c</fullName>
    <description>Nue (Ruby__Subscription__c) record Id for the staged entitlement. Written to Account_Entitlements__c.ELV_Source_Subscription__c by the Temp-Subs2Entitlements flow. Parallel to SubscriptionId, which holds the CPQ (SBQQ) Id. SS-13765.</description>
    <label>ELV SubscriptionId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>