objects/Temp_Subs2Entitlement__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>ProductId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>