objects/Temp_Subs2Entitlement__c/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <label>SubscriptionId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>