objects/Temp_Subs2Entitlement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>(&quot;Subscription&quot;)</defaultValue>
    <label>Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>